--- a/header.html
+++ b/header.html
@@ -9,21 +9,33 @@
       color: #fff;
       padding: 20px;
       text-align: center;
+      position: sticky;
+      top: 0;
     }
 
     h1 {
       margin: 0;
     }
 
-    p {
-      margin: 10px 0;
+    nav {
+      margin-top: 10px;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 10px;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>DevLink</h1>
-    <p>Welcome to my website!</p>
+    <nav>
+      <a href="page1.html">Page 1</a>
+      <a href="page2.html">Page 2</a>
+      <a href="page3.html">Page 3</a>
+    </nav>
   </header>
 
   <!-- Rest of your website content goes here -->
